--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -2,11 +2,21 @@
     font-size: 20px;
 }
 
+/* Vamos a usar la fuente que acabamos de improtar */
+/* Segun los principios de css las fuentes vienen de la pc (computadora) */
+/* Si la primera fuente no funciona va a tomar la de respaldo */
+
+body {
+    font-family: 'Noto Sans JP', sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+
 h1{
     color: green;
     background-color: beige;
     padding: 20px;
     text-align: center;
+    font-family: 'Noto Sans JP', sans-serif;
     font-size: 3rem;
 }
 
@@ -20,7 +30,7 @@ h1{
     
 }
 
-/* HOVER: Es ina seudoclase que cambiará cada vez que pasemos el cursor por el producto */
+/* HOVER: Es una seudoclase que cambiará cada vez que pasemos el cursor por el producto */
 /* Box-shadow : eje x  - eje y - opacidad */
 .product_cell:hover {
     border: 4px dashed red;
