--- a/CSS/reto1.css
+++ b/CSS/reto1.css
@@ -5,11 +5,27 @@
 }
 
 body {
-    background-color: hsl(30, 38%, 92%);
+    /*background-color: hsl(30, 38%, 92%);*/
+    background-color: blue;
 }
+
+/* @media: Palabra reservada en la que se refiere al tamaño del dispositivo o sitio web */
+@media (min-width:600px){
+    body {
+        background-color: hsl(30, 38%, 92%);
+    }
+}
+
+@media (min-width: 900px) {
+    body {
+        background-color: red;
+    }
+}
+
 
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -17,24 +33,16 @@ body {
 
 .left-image {
     background: url(../images/image-product-desktop.jpg);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
+    background-position: 0% 33%;
     /* Con esta medida va a tener más ancho pero sera del mismo color que el content */
-    height: 400px;
+    height: 200px;
     width: 300px;
     background-color: #fff;
     /* Para realizar esquinas bordeadas */
     border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-}
-
-.content {
-    height: 400px;
-    width: 250px;
-    background-color: #fff;
     border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
-    padding: 20px;
 }
 
 .sub-title {
@@ -63,24 +71,12 @@ body {
     font-weight: 500;
 }
 
-/* Poner al lado los precios */
-.content-price {
-    display: flex;
-    align-items: center;
-}
-
-.offert-price {
-    color: hsl(158, 36%, 37%);
-    font-family: "Fraunces"; sans-serif;
-    font-weight: 700;
-}
-
-.real-price {
-    font-family: "Montserrant"; sans-serif;
-    margin-left: 10px;
-    font-size: 13px;
-    /* Tachar texto */
-    text-decoration: line-through;
+.content {
+    width: 300px;
+    background-color: #fff;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    padding: 20px;
 }
 
 button {
@@ -107,3 +103,121 @@ button {
 button:hover {
     cursor: pointer;
 }
+
+
+/* Poner al lado los precios */
+.content-price {
+    display: flex;
+    align-items: center;
+}
+
+.offert-price {
+    color: hsl(158, 36%, 37%);
+    font-family: "Fraunces"; sans-serif;
+    font-weight: 700;
+}
+
+.real-price {
+    font-family: "Montserrant"; sans-serif;
+    margin-left: 10px;
+    font-size: 13px;
+    /* Tachar texto */
+    text-decoration: line-through;
+}
+
+.fastbutton {
+    display: none;
+}
+
+
+
+
+
+/* Pantalla mediana */
+@media (min-width: 600px) {
+    .container {
+        flex-direction: row;
+
+    }
+    
+    .left-image {
+        background-size: cover;
+        background-position: 50% 0%;
+        height: 400px;
+        width: 200px;
+        background-color: #fff;
+        border-radius: 0px;
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+    }
+
+    .content {
+        height: 400px;
+        width: 300px;
+        background-color: #fff;
+        border-radius: 0%;
+        border-top-right-radius: 8px;
+        border-bottom-right-radius: 8px;
+        padding: 20px;
+    }
+
+    .fastbutton {
+        display: none;
+    }
+}
+
+
+
+
+/* Pantalla grande */
+@media (min-width: 900px) {    
+    .left-image {
+        background-size: cover;
+        background-position: 50% 25%;
+        height: 400px;
+        width: 400px;
+        background-color: #fff;
+        border-radius: 0px;
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+    }
+
+    .content {
+        height: 400px;
+        width: 400px;
+        background-color: #fff;
+        border-radius: 0%;
+        border-top-right-radius: 8px;
+        border-bottom-right-radius: 8px;
+        padding: 20px;
+    }
+
+    button {
+        margin-top: 15px;
+        padding: 15px;
+        font-size: 20px;
+    }
+
+    .content-price {
+    margin-top: 30px;
+    }
+
+    .offert-price {
+    font-size: 40px;
+    font-weight: 800;
+    }
+
+    .real-price {
+    margin-left: 10px;
+    font-size: 20px;
+    }
+    
+    .fastbutton {
+        display: block;
+        background-color: orange;
+    }
+
+}
+
+
+
