--- a/Retos/reto5/CSS/styles.css
+++ b/Retos/reto5/CSS/styles.css
@@ -6,7 +6,11 @@
 
 body {
     font-family: 'Plus Jakarta Sans', sans-serif;
-    background-color: red;
+    background-color: hsl(210, 60%, 98%);
+}
+
+h1 {
+    font-size: 1.5em;
 }
 
 .grid-container {
@@ -14,13 +18,125 @@ body {
     height: 100vh;
     max-width: 600px;
     padding: 20px;
+    /* Colocar un orden entre los grid */
+    display: grid;
+    grid-template-areas: 
+    "header"
+    "main";
+    grid-template-rows: 100px auto;
 }
 
+.header {
+    display: grid;
+    /* grid-template-columns se puede usar px, % o fr (fracciones) */
+    grid-template-columns: 1fr auto;
+    align-items: center;
+    grid-area: header;
+}
+
+.header .badge {
+    background-color: hsl(219, 85%, 26%);
+    color: white;
+    font-size: 0.7em;
+    padding: 0px 12px;
+    border-radius: 6px ;
+}
+
+
+/* Para que se centre a si mismo */
+.header a  {
+    justify-self: end;
+    color: hsl(219, 14%, 63%);
+} 
+
+.header a:hover  {
+    color: hsl(219, 85%, 26%);
+    text-decoration: none;
+} 
+
+.main {
+
+    grid-area: main;
+    display: grid;
+    align-content: flex-start;
+    gap: 10px;
+
+}
+
+.main .card {
+    height: auto;
+    border-radius: 10px;
+    background-color: hsl(210, 60%, 98%);
+    padding: 10px;
+    display: grid;
+    grid-template-areas: 
+    /* orden en el que van los elementos */
+    /* el punto (.) es una celda vacia */
+    "avatar content"
+    ". time";
+    grid-template-columns: 15% auto;
+    gap: 10px;
+}
+
+.main .card .avatar{
+    grid-area: avatar;
+}
+
+.main .card .avatar img {
+    display: block;
+    width: 80%;
+    margin: 0px auto;
+}
+
+.main .card .content{
+    grid-area: 'content';
+}
+
+.main .card .time{
+    grid-area: time;
+    color: hsl(219, 14%, 63%);
+}
+
+.unread {
+    background-color: hsl(210, 60%, 98%);
+    border-radius: 10px;
+}
+
+.unread .text::after {
+    content: ' -';
+    color: hsl(1, 90%, 64%);
+}
+
+
+.header .badge {
+    background-color: hsl(219, 85%, 26%);
+    color: white;
+    padding: 0px 12px;
+    font-size: 0.5em;
+    border-radius: 6px;
+}
+
+/* pantalla grande */
+
 @media (min-width: 600px) {
+h1 {
+    font-size: 2em;
+}
+
     .grid-container{
         /* margin: 40px(alto y bajo) auto (lo máximo a los lados) */
         margin: 40px auto;
         border-radius: 20px;
         padding: 30px;
     }
+}
+
+.main {
+    gap: 20px;
+
+}
+
+.main .card {
+    padding: 20px;
+    gap: 5px;
 }
